<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="292dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="134dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pizza"
            tools:layout_editor_absoluteY="151dp" />

        <TableLayout
            android:layout_width="428dp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="28dp"
                    android:layout_weight="1"
                    android:text="@string/crust"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7">

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thick" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lean" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/sauce"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="1.0" />

                <ToggleButton
                    android:id="@+id/sauce_btn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="ToggleButton"
                    android:textOff="Bez sosu"
                    android:textOn="Z sosem"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="401dp"
        android:layout_height="256dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/order_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/broccoli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/broccolli" />

            <CheckBox
                android:id="@+id/pepperoni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni" />

            <CheckBox
                android:id="@+id/onion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onion" />

            <CheckBox
                android:id="@+id/garlic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garlic" />

            <CheckBox
                android:id="@+id/shrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protobello" />

            <CheckBox
                android:id="@+id/pineapple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pineapple" />

            <CheckBox
                android:id="@+id/corn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corn" />

            <CheckBox
                android:id="@+id/chilli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chilli" />

            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese" />

            <CheckBox
                android:id="@+id/olives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/olives" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:onClick="goToOrderActivityOnClick"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>