<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@string/your_pizza"
            android:textSize="24sp"
            tools:layout_editor_absoluteY="155dp" />

        <EditText
            android:id="@+id/pizza_name"
            android:layout_width="wrap_content"
            android:layout_height="147dp"
            android:layout_alignEnd="@+id/linear"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/new_pizza_name"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:layout_editor_absoluteY="145dp" />
    </LinearLayout>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ingredientGrid"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="411dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingredientGrid"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:onClick="orderOnClick"
        android:text="@string/order" />

    <GridView
        android:id="@+id/ingredientGrid"
        android:layout_width="403dp"
        android:layout_height="394dp"
        android:layout_below="@+id/linear"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:numColumns="2" />

</RelativeLayout>